--- a/predix-ci.yml
+++ b/predix-ci.yml
@@ -6,17 +6,19 @@ pipeline:
 
 steps:
   build:
-    script: "cd $HOME/repos && npm install && npm run dist && cd $HOME && tar -cvf apphub-microapp-seed.tar ./repos"
+    environment:
+      HOME: 'root'
+    script: "cd ~/repos && npm install && npm run dist && cd ~ && tar -cvf apphub-microapp-seed.tar ./repos"
     output: 
       - apphub_microapp_seed.tar
   test:
     input: 
       - apphub_microapp_seed.tar
-    script: "cd $HOME && tar -xvf apphub-microapp-seed.tar && cd repos && npm test"
+    script: "cd ~ && tar -xvf apphub-microapp-seed.tar && cd repos && npm test"
   deploy:
     input: 
       - apphub_microapp_seed.tar
-    script: "cd $HOME && tar -xvf apphub-microapp-seed.tar && cd repos && cf push && cf apps"
+    script: "cd ~ && tar -xvf apphub-microapp-seed.tar && cd repos && cf push && cf apps"
   register_with_apphub:
     script: "scripts/apphub_registration.sh"
     environment:
