--- a/predix-ci.yml
+++ b/predix-ci.yml
@@ -6,7 +6,7 @@ pipeline:
 
 steps:
   build:
-    script: "ls ~ && cd ~/repos && npm install && npm run dist && cd ~ && tar -cvf apphub-microapp-seed.tar ./repos"
+    script: "pwd && ls -la && ls ~ && cd ~/repos && npm install && npm run dist && cd ~ && tar -cvf apphub-microapp-seed.tar ./repos"
     environment:
       HOME: '/root'
     output: 
