--- a/predix-ci.yml
+++ b/predix-ci.yml
@@ -6,23 +6,17 @@ pipeline:
 
 steps:
   build:
-    script: "pwd && ls -la && ls ~ && cd ~/repos && npm install && npm run dist && cd ~ && tar -cvf apphub-microapp-seed.tar ./repos"
-    environment:
-      HOME: '/root'
+    script: "npm install && npm run dist && cd ~ && tar -cvf apphub-microapp-seed.tar ./repos"
     output: 
       - apphub_microapp_seed.tar
   test:
     input: 
       - apphub_microapp_seed.tar
-    environment:
-      HOME: '/root'
-    script: "cd ~ && tar -xvf apphub-microapp-seed.tar && cd repos && npm test"
+    script: "ls -la && tar -xvf apphub-microapp-seed.tar && cd repos && npm test"
   deploy:
     input: 
       - apphub_microapp_seed.tar
-    environment:
-      HOME: '/root'
-    script: "cd ~ && tar -xvf apphub-microapp-seed.tar && cd repos && cf push && cf apps"
+    script: "tar -xvf apphub-microapp-seed.tar && cd repos && cf push && cf apps"
   register_with_apphub:
     script: "scripts/apphub_registration.sh"
     environment:
