--- a/predix-ci.yml
+++ b/predix-ci.yml
@@ -6,7 +6,7 @@ pipeline:
 
 steps:
   build:
-    script: "npm install && npm run dist && cd ~ && tar -cvf apphub-microapp-seed.tar ./repos"
+    script: "docker pull predixadoption/devrelprediximage && docker images && npm install && npm run dist && cd ~ && tar -cvf apphub-microapp-seed.tar ./repos"
     output: 
       - apphub_microapp_seed.tar
   test:
