--- a/predix-ci.yml
+++ b/predix-ci.yml
@@ -9,9 +9,10 @@ steps:
     script: |
       service docker start && sleep 5 # Wait for docker daemon to start
       
+      set -x
       docker pull predixadoption/devrelprediximage
       CONTAINER_ID=`docker run -d predixadoption/devrelprediximage tail -f /dev/null`
-      docker exec -it $CONTAINER_ID bash -c '
+      docker exec -t $CONTAINER_ID bash -c '
         cd /tmp && \
         git clone https://github.com/PredixCI/apphub-microapp-seed.git && \ 
         cd apphub-microapp-seed && \
