--- a/predix-ci.yml
+++ b/predix-ci.yml
@@ -19,11 +19,11 @@ steps:
       #  npm install && \
       #  npm run dist'
       docker commit $CONTAINER_ID apphub_microapp_seed
-      docker save apphub_microapp_seed -o ./apphub_microapp_seed.tar
+      docker save apphub_microapp_seed -o apphub_microapp_seed.tar
       pwd
       ls -la
     output: 
-      - apphub_microapp_seed.tar
+      - /usr/local/repos/apphub_microapp_seed.tar
   test:
     input: 
       - apphub_microapp_seed.tar
