--- a/predix-ci.yml
+++ b/predix-ci.yml
@@ -29,7 +29,7 @@ steps:
       service docker start && sleep 5
       
       docker load -i /root/apphub_microapp_seed.tar
-      CONTAINER_ID=docker run -d apphub_microapp_seed tail -f /dev/null
+      CONTAINER_ID=`docker run -d apphub_microapp_seed tail -f /dev/null`
       docker exec -it $CONTAINER_ID 'npm test'
   deploy:
     input: 
