--- a/package.json
+++ b/package.json
@@ -208,6 +208,7 @@
     "report-dir": "./coverage"
   },
   "jest": {
+    "testURL" : "http://localhost/",
     "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup.js",
     "collectCoverage": true,
     "coverageDirectory": "<rootDir>/coverage/client",
