--- a/predix-ci.yml
+++ b/predix-ci.yml
@@ -30,7 +30,10 @@ steps:
 
       docker load -i /root/apphub_microapp_seed.tar
       CONTAINER_ID=`docker run -d apphub_microapp_seed tail -f /dev/null`
-      docker exec -t $CONTAINER_ID 'npm test'
+      docker exec -t $CONTAINER_ID -c '
+      cd /tmp && \
+      cd apphub-microapp-seed && \
+      npm test'
   deploy:
     input:
       - apphub_microapp_seed.tar
