--- a/predix-ci.yml
+++ b/predix-ci.yml
@@ -30,7 +30,7 @@ steps:
 
       docker load -i /root/apphub_microapp_seed.tar
       CONTAINER_ID=`docker run -d apphub_microapp_seed tail -f /dev/null`
-      docker exec -t $CONTAINER_ID -c '
+      docker exec -t $CONTAINER_ID bash -c '
       cd /tmp && \
       cd apphub-microapp-seed && \
       npm test'
